# nceplibs

./: CMakeLists.txt  README.md
bacio/: CMakeLists.txt  Makefile  Makefile.dependency  bacio-config.cmake  bacio.c  baciof.f  byteswap.c
bufr/: CMakeLists.txt  Makefile  bufr-config.cmake
bufr/cmake/: compiler_flags.cmake
crtm/: CMakeLists.txt  CRTM_MW_Water_SfcOptics.f90  CRTM_Parameters.f90  CRTM_SfcOptics.f90  Makefile  NLTECoeff_Define.f90  crtm-config.cmake
nemsio/: CMakeLists.txt  Makefile  Makefile.dependency
sfcio/: CMakeLists.txt  Makefile  sfcio-config.cmake
sigio/: CMakeLists.txt  Makefile  sigio-config.cmake
sp/: CMakeLists.txt  Makefile  bll2ps.f  sp-config.cmake
w3/: CMakeLists.txt  Makefile  w3-config.cmake
w3emc/: CMakeLists.txt  Makefile  w3emc-config.cmake
w3nco/: CMakeLists.txt  Makefile  mova2i.c  summary.c  w3nco-config.cmake
